[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/actions/weapons/plasma_gun/zap_effect.gd" type="Script" id=1]
[ext_resource path="res://scenes/actions/weapons/plasma_gun/assets/plasma_shot_bolt_2.png" type="Texture" id=2]

[node name="ZapEffect" type="Node2D"]
script = ExtResource( 1 )
bolt_texture = ExtResource( 2 )
min_num_bolts = 2
max_num_bolts = 4
min_flicker_time = 0.1
max_flicker_time = 0.3
flip_time = 0.1

[node name="LifeTimer" type="Timer" parent="."]

[connection signal="timeout" from="LifeTimer" to="." method="handle_life_timer"]
